# society-of-prompts

./: .gitignore  pyproject.toml  setup.py
data/: log.csv
notebooks/: TestSociety.ipynb  TestVerifiers.ipynb
scripts/: evaluate_society.py  run_vllm_server.sh  submit_algorithm.sh
src/: agent.py  algorithm.py  constants.py  society.py  utils.py
