[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "society-of-prompts"
version = "0.0.1"
dependencies = [
    "gpustat>=1.1.1",
    "instructor>=1.12.0",
    "jupyterlab>=4.4.10",
    "pandas>=2.3.3",
    "pyprojroot>=0.3.0",
    "verifiers>=0.1.6.post0",
    "vllm>=0.11.0",
]
